<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".SigninActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corner">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/field_tracker"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_marginBottom="5dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:text="@string/_91"
            android:fontFamily="@font/aclonica"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:textColor="#000000"
            android:ems="10"
            android:inputType="phone" />
        <Button
            android:id="@+id/sendotpbutton"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/aclonica"
            android:layout_below="@+id/phoneNumber"
            android:background="@drawable/ripple_rounded_corner"
            android:text="@string/send_otp"
            android:textAllCaps="false"
            android:textColor="#000000"
            />

        <EditText
            android:id="@+id/otp"
            android:layout_marginBottom="5dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:fontFamily="@font/aclonica"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/enter_otp"
            android:layout_below="@+id/sendotpbutton"
            android:textColor="#000000"
            android:background="@drawable/rounded_corner"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/verifyotpbutton"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/aclonica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/otp"
            android:background="@drawable/ripple_rounded_corner"
            android:text="@string/verify_otp"
            android:textAllCaps="false"
            android:textColor="#000000"
            />
    </RelativeLayout>


</RelativeLayout>